[gd_scene load_steps=3 format=3 uid="uid://bgrs8dok4spw3"]

[ext_resource type="Script" path="res://scripts/Cutscene_4.gd" id="1_fpc35"]
[ext_resource type="FontFile" uid="uid://dc0g87d43xkdc" path="res://Trajan Pro Bold.ttf" id="2_bb6jr"]

[node name="Cutscene_4" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fpc35")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5000.0
offset_top = -100.0
offset_right = 5000.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(5000, 100)
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_bb6jr")
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1

[node name="next_char" type="Timer" parent="."]

[node name="next_message" type="Timer" parent="."]

[node name="end" type="Timer" parent="."]

[connection signal="timeout" from="next_char" to="." method="_on_next_char_timeout"]
[connection signal="timeout" from="next_message" to="." method="_on_next_message_timeout"]
[connection signal="timeout" from="end" to="." method="_on_end_timeout"]
